# CryptoBot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.py
scripts/: add_test_trades.py  clear_trades.py  init_database.py
src/: api.py  backtester.py  binance_data_fetcher.py  binance_manager.py  bot_runner.py  check_db_connection.py  config.py  data_loader.py  db.py  feature_engineer.py  model_manager.py  notifier.py  settings.py  streamlit_app.py  timeseries_models.py  visualizer.py  wait_for_postgres.py
tests/: conftest.py  test_backtester.py  test_binance_manager.py  test_bot_runner.py  test_check_db_connection.py  test_data_loader.py  test_db.py  test_feature_engineer.py  test_model_manager.py  test_notification.py  test_notifier.py  test_timeseries_models.py  test_wait_for_postgres.py
